hphp/test/zend/good/ext/date/tests/bug27780.php.skipif
<?php
<<__EntryPoint>> function main() {
if (defined('PHP_WINDOWS_VERSION_MAJOR')) {
  die("skip. Not the same TZ on windows.");
}
}
