hphp/test/zend/bad/ext/soap/tests/schema/schema064.php.skipif
<?php 
if (defined('PHP_WINDOWS_VERSION_MAJOR')) {
	die('skip, windows has different TZ format');
}
require_once('skipif.inc'); ?>